# SDL_untitled_project

./: .gitignore  CMakeLists.txt.example  testResults.xml
.github/workflows/: cmake.yml  workflow-CMakeLists.txt
engine/: CMakeLists.txt
engine/colliders/: collider.hpp  hexagonalCollider.cpp  hexagonalCollider.hpp
engine/colliders/headers/: hexagonalCollider.hpp
engine/engine/: entity.cpp
engine/engine/headers/: entity.hpp
engine/headers/colliders/: collider.hpp  hexagonalCollider.hpp
engine/headers/objects/: gameObject.hpp
engine/math/: geometryHelpers.cpp  geometryHelpers.hpp  point.hpp
engine/objects/: camera.cpp  camera.hpp  entity.cpp  gameObject.cpp  gameObject.hpp  textureLoader.cpp  textureLoader.hpp  textureType.hpp  transform.cpp  transform.hpp
src/: CMakeLists.txt  constants.hpp  game.cpp  game.hpp  main.cpp
src/entities/: map.cpp  map.hpp  treeMapTile.cpp  treeMapTile.hpp
src/headers/: game.hpp
tests/: CMakeLists.txt  CMakeLists.txt.in  gameObject.cpp  test.cpp
utils/: sdl2_image-config.cmake.example
